<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sabina.tennisscorekeeper.activity.MainActivity"
    android:padding="@dimen/main_padding">

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:text="@string/player1"
                android:textSize="@dimen/player_text_size"
                style="@style/text_style"/>

            <TextView
                android:text="@string/game"
                android:layout_marginTop="@dimen/elements_margin_top"
                style="@style/text_style"/>

            <TextView
                android:id="@+id/player1_game"
                android:text="@string/zero"
                android:layout_marginTop="@dimen/elements_margin_top"
                android:textSize="@dimen/score_text_size"
                style="@style/text_style"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_point"
                android:onClick="addPointToPlayer1"
                android:layout_marginTop="@dimen/elements_margin_top"
                style="@style/button_style"/>

            <TextView
                android:text="@string/set"
                android:layout_marginTop="@dimen/elements_margin_top"
                style="@style/text_style"/>

            <TextView
                android:id="@+id/player1_set"
                android:text="@string/zero"
                android:layout_marginTop="@dimen/elements_margin_top"
                android:textSize="@dimen/score_text_size"
                style="@style/text_style"/>

            <TextView
                android:text="@string/double_fault"
                android:layout_marginTop="@dimen/elements_margin_top"
                style="@style/text_style"/>

            <TextView
                android:id="@+id/player1_fault"
                android:text="@string/zero"
                android:layout_marginTop="@dimen/elements_margin_top"
                android:textSize="@dimen/score_text_size"
                style="@style/text_style"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_fault"
                android:onClick="addFaultToPlayer1"
                android:layout_marginTop="@dimen/elements_margin_top"
                style="@style/button_style"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray">
        </View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:text="@string/player2"
                android:textSize="@dimen/player_text_size"
                style="@style/text_style"/>

            <TextView
                android:text="@string/game"
                android:layout_marginTop="@dimen/elements_margin_top"
                style="@style/text_style"/>

            <TextView
                android:id="@+id/player2_game"
                android:text="@string/zero"
                android:layout_marginTop="@dimen/elements_margin_top"
                android:textSize="@dimen/score_text_size"
                style="@style/text_style"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_point"
                android:onClick="addPointToPlayer2"
                android:layout_marginTop="@dimen/elements_margin_top"
                style="@style/button_style"/>

            <TextView
                android:text="@string/set"
                android:layout_marginTop="@dimen/elements_margin_top"
                style="@style/text_style"/>

            <TextView
                android:id="@+id/player2_set"
                android:text="@string/zero"
                android:layout_marginTop="@dimen/elements_margin_top"
                android:textSize="@dimen/score_text_size"
                style="@style/text_style"/>

            <TextView
                android:text="@string/double_fault"
                android:layout_marginTop="@dimen/elements_margin_top"
                style="@style/text_style"/>

            <TextView
                android:id="@+id/player2_fault"
                android:text="@string/zero"
                android:layout_marginTop="@dimen/elements_margin_top"
                android:textSize="@dimen/score_text_size"
                style="@style/text_style"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_fault"
                android:onClick="addFaultToPlayer2"
                android:layout_marginTop="@dimen/elements_margin_top"
                style="@style/button_style"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:onClick="reset"
        style="@style/button_style"/>

</RelativeLayout>
